tests/warn/indentation2.jo
param pageWidth: Int
param indent: Int

def phraseIndent =
  with indent = 10 in println "hello"
    if 3 > 5 then println "error"   // error

def phraseIndent1 =
 with pageWidth = 10 in
   with indent = 20 in
     println "world"

def phraseIndent2 =
  with indent = 5 in with pageWidth = 10 in
    println "world"

def phraseIndent3 =
  with pageWidth = 10 in with indent = 20 in
    println "world"

def phraseIndent4 =
  with
       pageWidth = 10 in
    with indent = 30 in
     println "world"

def phraseIndent5 =
  with indent = 30, pageWidth = 10 in
    println "world"
